# voice-chat-ai

./: .biomerc.json  .dockerignore  .env.sample  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.minimal  INSTALL.md  LICENSE  README.md  README_REQUIREMENTS.md  app.py  cli.py  cli_utils.py  conversation_history.json  conversation_history.txt  core.py  cpu_requirements.txt  docker-compose.yml  download_sparktts_model.py  elevenlabs_voices.json  elevenlabs_voices.json.example  elevenlabs_voices.json.sample  generate_certs.py  minimal_app.py  no-xtts-Dockerfile  pyproject.toml  requirements-minimal.txt  requirements.txt  requirements_cpu.txt  requirements_cpu_legacy_py310.txt  requirements_cpu_sparktts.txt  requirements_cuda_sparktts.txt  requirements_no_xtts.txt  requirements_sparktts.txt  setup_sparktts.py  sixtydb_voices.json.example  start.bat
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  opencode.yml  python-app.yml  python-publish.yml
app/: app.py  app_logic.py  core.py  enhanced_logic.py  log_stream.py  logger_config.py  main.py  minimal_app.py  minimal_shared.py  realtime_sessions.py  session_manager.py  shared.py  story_time.py  stream_helpers.py  test_webrtc_client.py  transcription.py
app/audio_bridge/: __init__.py  audio_bridge_router.py  audio_bridge_server.py  audio_processor.py
app/services/: audio.py
app/templates/: audio_bridge.html  enhanced.html  index.html  openai_realtime.html  speech_test.html  webrtc_realtime.html
characters/alien_scientist/: alien_scientist.txt  prompts.json
characters/angry_dwarf/: angry_dwarf.txt  prompts.json
characters/ant_anarchist/: ant_anarchist.txt  prompts.json
characters/bigfoot/: bigfoot.txt  prompts.json
characters/bipolar_ai/: bipolar_ai.txt  prompts.json
characters/black_hole/: black_hole.txt  prompts.json
characters/c3po_robot/: c3po_robot.txt  prompts.json
characters/caffeinated_psychic/: caffeinated_psychic.txt  prompts.json
cli/: SparkTTS.py  __init__.py
detective/: prompts.json
docker/: update_providers.bat  update_providers.sh  using-docker.txt
docs/: QWEN3_TTS.md  SPARKTTS.md  audio-bridge.md  dynamic_prompts_and_tts_filter.md  games.md  stories.md
newscaster1920s/: newscaster1920s.txt
pirate/: pirate.txt  prompts.json
samantha/: prompts.json
sparktts/: __init__.py
tests/: test_kokoro_voices.py  test_litellm_provider.py  test_log_stream.py  test_story_time.py
wizard/: prompts.json  wizard.txt
(+235 files in other folders)
